fix: components overflow

--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -1169,7 +1169,6 @@ html {
     justify-content: center;
     position: fixed;
     top: 0;
-    z-index: 1;
     background: rgba(12, 12, 12, 0.94);
     -webkit-backdrop-filter: blur(4px);
     backdrop-filter: blur(4px);
